--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   
   <body>
       
-<img src="https://avatars3.githubusercontent.com/u/67621783?v=4">
+        <h1>I'm header 1 </h1>
+      
+        <img src="https://avatars3.githubusercontent.com/u/67621783?v=4">
 
     Hello there, awesome person! 
   </body>
