--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     Hello there, awesome person! 
       
+      <a href="paralax_den.html"> Paralax denemesi </a>
+      
       <ol>
     <li>This</li>
       <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
